# Anonymizer

./: .copyrightignore  .envrc  .gitignore  .importlinter  .mise.toml  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  STYLEGUIDE.md  dco-signatures.json  gen_ref_pages.py  index.html  logging_demo.ipynb  logging_demo.py  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  sitemap.xml  versions.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: benchmark-ci.yml  build-notebooks.yml  ci.yml  copyright-check.yml  dco-assistant.yml  docs.yml  internal-release.yml  pack-tutorials.yml  pr-linked-issue.yml  pr-stale.yml  release.yml  request-nvskills-ci.yml  semantic-pull-requests.yml
.greptile/: config.json
.mise/tasks/: benchmark  build-wheel  clean  clean-merged-branches  clean-pycache  convert-notebooks  docs.toml  publish.toml  quality.toml  setup.toml  tests.toml
0.1.0/: sitemap.xml
0.1.0/data/: TAB_legal_sample25.csv
0.1.0/hooks/: index.html
0.1.0/search/: search_index.json
0.1.1/: index.html  objects.inv
0.1.1/hooks/: index.html
0.1.1/tutorials/: index.html
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/data/: NVIDIA_synthetic_biographies.csv
0.2.0/devnotes/: index.html
0.2.0/hooks/: index.html
0.2.0/search/: search_index.json
0.2.0/tutorials/: index.html
0.2.1/: 404.html  sitemap.xml
0.2.1/devnotes/: index.html
0.2.1/hooks/: index.html
0.2.1/tutorials/: index.html
0.3.0/: sitemap.xml
0.3.0/devnotes/: index.html
0.3.0/hooks/: index.html
0.3.0/search/: search_index.json
0.3.0/tutorials/: index.html
0.3.1/: sitemap.xml
0.3.1/devnotes/: index.html
0.3.1/hooks/: index.html
0.3.1/search/: search_index.json
0.3.1/troubleshooting/: index.html
benchmarks/: HANDOFF.md  README.md
benchmarks/configs/: smoke.json
concepts/detection/: index.html
concepts/models/: index.html
concepts/replace/: index.html
concepts/rewrite/: index.html
css/: style.css
dev/: 404.html  gen_ref_pages.py  index.html  objects.inv  sitemap.xml
dev/css/: style.css
dev/data/: index.html
dev/devnotes/: index.html
dev/hooks/: index.html
dev/search/: search_index.json
dev/troubleshooting/: index.html
dev/tutorials/: index.html
devnotes/: index.html
docs/: hooks.py  index.md  troubleshooting.md
docs/concepts/: choosing-a-strategy.md  detection.md  evaluation.md  local-vllm.md  long-context.md  models.md  replace.md  rewrite.md  self-hosting-gliner.md
docs/css/: style.css
docs/data/: NVIDIA_synthetic_biographies.LICENSE  README.md  TAB_legal_sample25.LICENSE
docs/developer-guide/: architecture.md
docs/development/: observability.md
docs/devnotes/: .authors.yml  index.md
docs/notebook_source/: 01_local_replace.py  01_replace.py  01_your_first_anonymization.ipynb  01_your_first_anonymization.py  02_detection_debug.py  02_inspecting_detected_entities.py  02_llm_replace.py  03_choosing_a_replacement_strategy.ipynb  03_choosing_a_replacement_strategy.py  03_detection_debug.py  04_rewriting_biographies.py  05_rewriting_legal_documents.py
docs/notebooks/: 01_your_first_anonymization.ipynb  02_inspecting_detected_entities.ipynb  03_choosing_a_replacement_strategy.ipynb  04_rewriting_biographies.ipynb  05_rewriting_legal_documents.ipynb  evaluate-replace-demo.ipynb
docs/reference/: anonymizer.md
docs/tutorials/: index.md
docs/user-guide/: getting-started.md
getting-started/: index.html
hooks/: index.html
notebook_source/01_replace/: index.html
notebook_source/01_your_first_anonymization/: index.html
notebook_source/02_detection_debug/: index.html
notebook_source/02_inspecting_detected_entities/: 02_inspecting_detected_entities.py  index.html
notebook_source/03_choosing_a_replacement_strategy/: index.html
notebook_source/03_rewrite/: 03_rewrite.py  index.html
notebook_source/04_rewriting_biographies/: 04_rewriting_biographies.py  index.html
notebook_source/05_rewriting_legal_documents/: 05_rewriting_legal_documents.py  index.html
notebook_source/e2e/: e2e.py  index.html
notebooks/: crowdstrike_trace_dataframe.csv  crowdstrike_trace_dataframe_dedup.csv  temp_results_rewrite.csv
notebooks/01_replace/: 01_replace.ipynb  index.html
notebooks/01_your_first_anonymization/: index.html
notebooks/02_inspecting_detected_entities/: index.html
notebooks/03_choosing_a_replacement_strategy/: 03_choosing_a_replacement_strategy.ipynb  index.html
notebooks/03_rewrite/: 03_rewrite.ipynb  index.html
notebooks/04_rewriting_biographies/: 04_rewriting_biographies.ipynb  index.html
notebooks/05_rewriting_legal_documents/: 05_rewriting_legal_documents.ipynb  index.html
notebooks/temp/: _temp_conversations.csv
plan/: plan.md
plans/cli-display/: plan.md
plans/custom-column-plugins/: anonymizer-workflow-columns.md
plans/rewrite-evaluation/: plan.md
reference/SUMMARY/: index.html
reference/anonymizer/: index.html
scripts/: benchmark_ci.py  benchmark_sync_vs_async.py
search/: search_index.json
skills/anonymizer/: BENCHMARK.md  SKILL.md  skill-card.md
src/anonymizer/: __init__.py  __main__.py  distributed.py  logging.py  measurement.py  telemetry.py
tests/: conftest.py  test_benchmark_ci.py  test_debug_logging.py  test_import.py  test_logging_config.py  test_measurement.py  test_progress_tracker.py  test_telemetry.py
tests/config/: test_anonymizer_config.py  test_rewrite.py
tests/engine/: test_attribute_fidelity_judge.py  test_chunked_augmentation.py  test_chunked_detection.py  test_chunked_final_judge.py  test_chunked_latent.py  test_chunked_replace.py  (+38 more)
tests_e2e/: test_e2e.py
tools/: install-mise.sh  serve_gliner.py  vllm_debug.py
tutorials/: index.html
(+477 files in other folders)
