[project]
name = "nemo-anonymizer"
dynamic = ["version"]
description = "NeMo Anonymizer"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"

dependencies = [
    "data-designer>=0.7,<0.8",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.12,<3",
    "cyclopts>=3",
    "pygments>=2.20.0",
    "cryptography>=46.0.6",
    "httpx>=0.27.0",
    "tiktoken>=0.9.0",
]

[project.scripts]
anonymizer = "anonymizer.interface.cli.main:main"

[project.entry-points."data_designer.plugins"]
anonymizer-detection-transform = "anonymizer.engine.workflow_columns.detection.plugins:detection_transform_plugin"
anonymizer-chunked-validation = "anonymizer.engine.workflow_columns.detection.plugins:chunked_validation_plugin"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0,<5",
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.0,<8",
    "ruff>=0.12.3,<1",
    "ty==0.0.58",
    {include-group = "measurement"},
]
measurement = [
    "wandb[workspaces]>=0.19,<1",
]
docs = [
    "mike>=2.1.3,<3",
    "mkdocs-material",
    "mkdocstrings[python]",
    "griffe-pydantic",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-jupyter",
    "jupytext",
]
notebooks = [
    "datasets>=4.0.0,<5",
    "ipykernel>=6.29.0,<7",
    "jupyter>=1.0.0,<2",
    "jupytext>=1.16.0,<2",
    "pillow>=12.0.0,<13",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"
vcs = "git"
style = "pep440"

[tool.hatch.build.targets.wheel]
packages = ["src/anonymizer"]

[tool.uv]
required-version = ">=0.5.0"
package = true

constraint-dependencies = [
  "grpcio>=1.68.0",  # CVE-2024-11407
  "urllib3>=2.7.0",  # CVE-2026-44432
  "python-dotenv>=1.2.2",  # CVE-2026-28684
  "pyjwt>=2.13.0",  # CVE-2026-48524, CVE-2026-48522, CVE-2026-48525, CVE-2026-48526
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests",
    "integration: integration tests",
]

[tool.ty.src]
include = ["src", "tests", "tests_e2e", "docs", "scripts", "tools"]

[tool.ty.environment]
python-version = "3.11"
root = ["src", ".", "tools/measurement"]

[tool.coverage.run]
omit = []
